--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = forest
-version = 0.0.1
+name = hhcm_forest
+version = 0.0.3
 author = Arturo Laurenzi
 author_email = arturo.laurenzi@iit.it
 description = A minimalistic tool to automate source code cloning and building
