--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,8 @@ classifiers =
 [options]
 package_dir =
     = src
-packages = find:
+packages = find_namespace:
+include_package_data = True
 python_requires = >=3.6
 
 [options.packages.find]
@@ -25,4 +26,4 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    forest = forest:main
+    forest = forest.forest:main
