--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,9 @@ package_dir =
 packages = find_namespace:
 include_package_data = True
 python_requires = >=3.6
+install_requires =
+    argparse
+    argcomplete
 
 [options.packages.find]
 where = src
