test(xbot2_examples): succesful build of xbot2_examples recipe from zero
Observations:
- todo: add check if dependencies have changed and need to be rebuilt
- todo: forest must be called from the top dir, throw error if this is not the case like catkin_make and/or add an arg to specify the dir where forest should be called

--- a/src/forest/recipes/xbot2_examples.yaml
+++ b/src/forest/recipes/xbot2_examples.yaml
@@ -2,12 +2,16 @@ clone:
   type: git
   server: github.com
   repository: advrhumanoids/xbot2_examples.git
-  tag: master
+  tag: fi_gripper_btns
 
 build:
   type: cmake
-  args: []
+  args:
+    - -DENABLE_XENO=OFF
 
 depends:
   - xbot2
+  - cartesian_interface
   - gazebo
+  - cartesio-integration
+  - ec_xbot2_client
