fix(dependencies): add parse and pyyaml to install_requires, remove argparse (stdlib)

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,8 +21,9 @@ packages = find_namespace:
 include_package_data = True
 python_requires = >=3.6
 install_requires =
-    argparse
     argcomplete
+    parse
+    pyyaml
 
 [options.packages.find]
 where = src
