feat(docker): wip expect to automatic fill of prompt for pwd, add --debug-pwd arg for testing

--- a/docker/bionic_bare_bones/Dockerfile
+++ b/docker/bionic_bare_bones/Dockerfile
@@ -1,7 +1,7 @@
 FROM ros:melodic-ros-base-bionic
 
 RUN apt-get update && apt-get install -y \
-sudo file build-essential cmake cmake-curses-gui openssh-client vim git python3-pip wget
+sudo file build-essential cmake cmake-curses-gui openssh-client vim git python3-pip wget expect
 
 RUN pip3 install --upgrade pip
 RUN pip3 install -U setuptools
