--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = hhcm_forest
-version = 0.0.30
+version = 0.0.32
 author = Arturo Laurenzi
 author_email = arturo.laurenzi@iit.it
 description = A minimalistic tool to automate source code cloning and building
@@ -24,6 +24,7 @@ install_requires =
     argcomplete
     parse
     pyyaml
+    psutil
 
 [options.packages.find]
 where = src
