--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ notifications:
 before_script:
   - echo "Travis tag is $TRAVIS_TAG"
   - sudo apt update && sudo apt install python3-pip python3-setuptools cmake patchelf python3-venv
-  - sudu pip3 install -U setuptools urllib3 requests
+  - sudo pip3 install -U setuptools urllib3 requests
   - sudo pip3 install build twine
   - sudo pip3 install .
 
