--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,7 @@ before_script:
 
 script: 
   - set -e
-  - cd test
-  - python3 test_run_bash_tests.py
+  - python3 test/test_run_bash_tests.py
   - python3 -m build
   - if [ -z $TRAVIS_TAG ]; then echo "Not a tag build, will not upload to pypi"; else twine upload -u __token__ -p $PYPI_TOKEN dist/*; fi
 
