--- a/test/recipes/forest_test_with_dep.yaml
+++ b/test/recipes/forest_test_with_dep.yaml
@@ -2,7 +2,10 @@ clone:
   type: git
   server: github.com
   repository: advrhumanoids/forest-test.git
-  tag: master
+  tag: with_dep
 
 build:
   type: cmake
+
+depends:
+  - forest_test
