--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,5 @@ script:
   - set -e
   - python3 test/test_run_bash_tests.py
   - python3 -m build
-  - if [ -z $TRAVIS_TAG ]; then echo "Not a tag build, will not upload to pypi"; else twine upload -u __token__ -p $PYPI_TOKEN dist/*; fi
+  - if [ -z $TRAVIS_TAG ] || [ "$(lsb_release -cs)" == "bionic" ]; then echo "Not a tag build, will not upload to pypi"; else twine upload -u __token__ -p $PYPI_TOKEN dist/*; fi
 
