--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-    "setuptools>=59",
+    "setuptools>=59, <61.0",
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
